@@ -43,7 +43,9 @@ setup(name='zope.password',
       keywords='zope3 zope authentication password',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
-      extras_require=dict(test=['zope.testing', 'zope.component']),
+      extras_require=dict(test=['zope.testing',
+                                'zope.component',
+                                'zope.schema']),
       namespace_packages=['zope'],
       install_requires=['setuptools',
                         'zope.interface',
