@@ -1,18 +1,10 @@
 <configure xmlns="http://namespaces.zope.org/zope">
 
-  <class class=".password.PlainTextPasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
   <utility
       name="Plain Text"
       provides=".interfaces.IPasswordManager"
       factory=".password.PlainTextPasswordManager"
       />
-
-  <class class=".password.MD5PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
 
   <utility
       name="MD5"
@@ -20,24 +12,45 @@
       factory=".password.MD5PasswordManager"
       />
 
-  <class class=".password.SHA1PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
   <utility
       name="SHA1"
       provides=".interfaces.IPasswordManager"
       factory=".password.SHA1PasswordManager"
       />
 
-  <class class=".password.SSHAPasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
   <utility
       name="SSHA"
       provides=".interfaces.IPasswordManager"
       factory=".password.SSHAPasswordManager"
       />
+
+  <utility
+      component=".vocabulary.PasswordManagerNamesVocabulary"
+      provides="zope.schema.interfaces.IVocabularyFactory"
+      name="Password Manager Names"
+      />
+
+  <configure
+      xmlns:zcml="http://namespaces.zope.org/zcml"
+      zcml:condition="installed zope.security"
+      >
+
+    <class class=".password.PlainTextPasswordManager">
+      <allow interface=".interfaces.IPasswordManager" />
+    </class>
+  
+    <class class=".password.MD5PasswordManager">
+      <allow interface=".interfaces.IPasswordManager" />
+    </class>
+  
+    <class class=".password.SHA1PasswordManager">
+      <allow interface=".interfaces.IPasswordManager" />
+    </class>
+  
+    <class class=".password.SSHAPasswordManager">
+      <allow interface=".interfaces.IPasswordManager" />
+    </class>
+
+  </configure>
 
 </configure>
